// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ServiceOfferingCardBody /> should render correctly 1`] = `
<ServiceOfferingCardBody
  display_name="display name"
  distributor="Red Hat"
  long_description="long description"
  name="Foo"
>
  <Styled(CardBody)>
    <CardBody
      className="sc-AxhUy loBGYF"
    >
      <div
        className="pf-c-card__body sc-AxhUy loBGYF"
      >
        <TextContent>
          <div
            className="pf-c-content"
          >
            <ConditionalLink>
              <Text
                component="h3"
                title="Foo"
              >
                <h3
                  className=""
                  data-pf-content={true}
                  title="Foo"
                >
                  <styled.div>
                    <div
                      className="sc-AxhCb hYKqDj"
                    >
                      Foo
                    </div>
                  </styled.div>
                </h3>
              </Text>
            </ConditionalLink>
            <Text
              component="small"
            >
              <small
                className=""
                data-pf-content={true}
              >
                Red Hat
              </small>
            </Text>
          </div>
        </TextContent>
        <ItemDetails
          long_description="long description"
          toDisplay={
            Array [
              "long_description",
            ]
          }
        >
          <styled.div
            key="card-prop-long_description"
          >
            <div
              className="sc-AxjAm hDziHm"
            >
              long description
            </div>
          </styled.div>
        </ItemDetails>
      </div>
    </CardBody>
  </Styled(CardBody)>
</ServiceOfferingCardBody>
`;

exports[`<ServiceOfferingCardBody /> should render correctly with alternative values 1`] = `
<ServiceOfferingCardBody
  description="Bar"
  name="Foo"
>
  <Styled(CardBody)>
    <CardBody
      className="sc-AxhUy loBGYF"
    >
      <div
        className="pf-c-card__body sc-AxhUy loBGYF"
      >
        <TextContent>
          <div
            className="pf-c-content"
          >
            <ConditionalLink>
              <Text
                component="h3"
                title="Foo"
              >
                <h3
                  className=""
                  data-pf-content={true}
                  title="Foo"
                >
                  <styled.div>
                    <div
                      className="sc-AxhCb hYKqDj"
                    >
                      Foo
                    </div>
                  </styled.div>
                </h3>
              </Text>
            </ConditionalLink>
          </div>
        </TextContent>
        <ItemDetails
          description="Bar"
          toDisplay={
            Array [
              "description",
            ]
          }
        >
          <styled.div
            key="card-prop-description"
          >
            <div
              className="sc-AxjAm hDziHm"
            >
              Bar
            </div>
          </styled.div>
        </ItemDetails>
      </div>
    </CardBody>
  </Styled(CardBody)>
</ServiceOfferingCardBody>
`;
